<resources>
    <string name="app_name">Ribbit</string>


    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">Don\'t have and account? Sign Up!</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="email_hint">E-mail</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password</string>
    <string name="login_error_title">Try Again</string>
    <string name="action_logout">Logout</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="title_activity_password_reset">Reset Password</string>
    <string name="reset_password_instructions">To reset your password, enter the email address you signed up with and tap \"Reset Password\". A password reset link will be sent to your inbox.</string>
    <string name="reset_password_button_text">RESET PASSWORD</string>
    <string name="empty_inbox_label">Your inbox is empty.</string>
    <string name="action_edit_friends">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="edit_friends_empty_label">No users found</string>
    <string name="error_title">Oops!</string>
    <string name="empty_friends_label">You have no friends</string>
    <string name="action_remove">Remove</string>
    <string name="menu_camera_label">Camera</string>
    <string name="error_external_storage">There was a problem accessing your device\'s external storage</string>
    <string name="general_error">Sorry there was a problem.</string>
    <string name="video_file_size_warning">The selected video must be less than 10 MB</string>
    <string name="error_opening_file">There was a problem with the selected file.</string>
    <string name="error_file_size_too_large">The selected file is too large! Please select a new file.</string>
    <string-array name="camera_choices">
        <item >Take Picture</item>
        <item >Take Video</item>
        <item >Choose Picture</item>
        <item >Choose Video</item>
    </string-array>
    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="menu_send_label">Send</string>
    <string name="success_message">Message Sent!</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
    <string name="content_desc_background">background image</string>
    <string name="subTitle">A Treehouse Project</string>
    <string name="cancel_button_text">CANCEL</string>
    <string name="content_desc_button_divider">Button Divider</string>
    <string name="content_desc_message_icon">Message Icon</string>
    <string name="sender_name_placeholder_text">SenderName</string>
    <string name="content_desc_user_avatar">User Avatar</string>
    <string name="empty_friends_text">Please add friends first</string>
    <string name="content_desc_user_checkmark">User Checkmark</string>
    <string name="empty_users_text">There are no users to display</string>
    <string name="push_message">"You have a new Ribbit message from %s!"</string>
</resources>
